# hypervisor-rs

./: Cargo.toml  LICENSE.md  README.md  build.rs  index.html  search-index.js
examples/: example.rs
hypervisor/: enum.Error.html  enum.MemPerm.html  enum.VMXCap.html  enum.x86Reg.html  fn.create_vm.html  fn.destroy_vm.html  fn.interrupt_vcpus.html  fn.map_mem.html  fn.protect_mem.html  fn.read_vmx_cap.html  fn.sync_tsc.html  fn.unmap_mem.html  index.html  sidebar-items.js  struct.vCPU.html
hypervisor/consts/: constant.VMX_BASIC_TRUE_CTLS.html  index.html  sidebar-items.js
hypervisor/ffi/: constant.HV_BAD_ARGUMENT.html  constant.HV_BUSY.html  constant.HV_ERROR.html  (+41 more)
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CLOCAL.html  constant.CODESET.html  constant.CR0.html  constant.CR1.html  constant.CR2.html  constant.CR3.html  constant.CREAD.html  constant.CRNCYSTR.html  constant.CRTSCTS.html  constant.CS5.html  constant.CS6.html  constant.CS7.html  (+908 more)
src/: ffi.rs  lib.rs
(+316 files in other folders)
