[package]
name = "hypervisor"
version = "0.0.1"
authors = ["Saurav Sachidanand <sauravsachidanand@gmail.com>"]

license = "MIT"
repository = "https://www.github.com/saurvs/hypervisor-rs"

description = " Hypervisor for OSX"
keywords = ["hypervisor", "virtualization", "osx", "x86", "VT-x"]

build = "build.rs"

[dependencies]
libc = "0.2.7"
